<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24px"
            android:title="@string/home_menu_label" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/friends_menu_label" />
        <item
            android:id="@+id/nav_near_friends"
            android:icon="@drawable/ic_meeting_24px"
            android:title="@string/meetFriends_menu_label" />
        <!--<item-->
            <!--android:id="@+id/nav_activities"-->
            <!--android:icon="@drawable/ic_activity_24px"-->
            <!--android:title="Activities" />-->
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifi_24px"
            android:title="@string/notifications_menu_label"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24px"
            android:title="@string/settings_menu_label"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out_24dp"
            android:title="@string/logout_menu_label"/>

    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
