<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.seniorproject.sallemapp.Activities.RegistrationActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/lbl_first_name"
        android:text="@string/first_name_label"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/lbl_last_name"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/lbl_first_name"
        android:layout_alignRight="@+id/lbl_first_name"
        android:layout_alignEnd="@+id/lbl_first_name"
        android:textSize="18sp" />
    <TextView
        android:text="@string/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_last_name"
        android:layout_alignLeft="@+id/lbl_last_name"
        android:layout_alignStart="@+id/lbl_last_name"
        android:layout_marginTop="24dp"
        android:id="@+id/lbl_email"
        tools:ignore="HardcodedText"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/lbl_password"
        tools:ignore="HardcodedText"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/lbl_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_last_name"
        android:background="@color/sallemGray"
        android:layout_alignBaseline="@+id/lbl_last_name"
        android:layout_alignBottom="@+id/lbl_last_name"
        android:layout_alignLeft="@+id/txt_first_name"
        android:layout_alignStart="@+id/txt_first_name"
        tools:targetApi="cupcake" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_above="@+id/lbl_password"
        android:layout_alignRight="@+id/txt_last_name"
        android:layout_alignEnd="@+id/txt_last_name"
        android:id="@+id/txt_email"
        android:background="@color/sallemGray"
        tools:targetApi="cupcake" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_alignBaseline="@+id/lbl_password"
        android:layout_alignBottom="@+id/lbl_password"
        android:layout_alignLeft="@+id/txt_email"
        android:layout_alignStart="@+id/txt_email"
        android:background="@color/sallemGray" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText5"
        android:background="@color/sallemGray"
        android:layout_alignBottom="@+id/lbl_confirm_password"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <TextView
        android:text="@string/confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_confirm_password"
        android:textSize="14sp"
        android:textColor="@android:color/background_dark"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView4"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/lbl_last_name"
        android:layout_alignStart="@+id/lbl_last_name" />

    <TextView
        android:text="Your access to or use SALLEM APP (including the licenses, public domain tools, and choosers) signifies that you have read, understood, and agreed to be bound by the terms. By accessing or using any services you also represent that you have the legal authority to accept the terms on behalf of yourself and any party you represent in connection with your use of any services. If you do not agree to the terms, you are not authorized to use any services."        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_term"
        android:maxLines="4"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/lbl_email"
        android:layout_alignStart="@+id/lbl_email"
        android:textSize="12sp"
        tools:ignore="HardcodedText" />

    <Button
        android:text="@string/register_label"
        android:layout_width="200dp"
        android:layout_marginTop="33dp"
        android:id="@+id/Btn_resgisteration"
        tools:ignore="HardcodedText"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/sallemWhite"
        android:background="@color/sallemBlue"
        android:layout_below="@+id/cb_Agree"
        android:layout_centerHorizontal="true"
        android:layout_height="30dp" />

    <CheckBox
        android:text="@string/i_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_Agree"
        android:textSize="12sp"
        android:layout_below="@+id/lbl_term"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_first_name"
        android:background="@color/sallemGray"
        tools:targetApi="cupcake"
        android:layout_alignBaseline="@+id/lbl_first_name"
        android:layout_alignBottom="@+id/lbl_first_name"
        android:layout_toRightOf="@+id/lbl_confirm_password"
        android:layout_toEndOf="@+id/lbl_confirm_password" />


</RelativeLayout>
