<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.seniorproject.sallemapp.Activities.SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_marginTop="100dp"
        android:layout_weight="0"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription,ObsoleteLayoutParam"
        android:contentDescription="" />

    <TextView
        android:text="@string/user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="53dp"
        android:id="@+id/lbl_user_name"
        android:fontFamily="serif"
        android:typeface="serif"
        android:textSize="17sp"
        android:textColor="@android:color/background_dark"
        tools:targetApi="jelly_bean" />

    <TextView
        android:text="@string/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/lbl_user_name"
        android:layout_alignStart="@+id/lbl_user_name"
        android:layout_marginTop="53dp"
        android:id="@+id/lbl_password"
        android:fontFamily="serif"
        android:typeface="serif"
        android:textSize="19sp"
        android:textColor="@android:color/background_dark"
        tools:targetApi="jelly_bean" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:id="@+id/txt_user_name"
        android:background="@color/sallemGray"
        android:layout_alignBaseline="@+id/lbl_user_name"
        android:layout_alignBottom="@+id/lbl_user_name"
        android:layout_toRightOf="@+id/lbl_user_name"
        android:layout_toEndOf="@+id/lbl_user_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_password"
        android:background="@color/sallemGray"
        android:layout_alignBaseline="@+id/lbl_password"
        android:layout_alignBottom="@+id/lbl_password"
        android:layout_alignLeft="@+id/txt_user_name"
        android:layout_alignStart="@+id/txt_user_name" />

    <Button
        android:text="@string/signin_label"
        android:layout_below="@+id/lbl_password"
        android:layout_alignLeft="@+id/txt_password"
        android:layout_alignStart="@+id/txt_password"
        android:layout_marginTop="53dp"
        android:id="@+id/Btn_Sign_in"
        android:background="@color/sallemBlue"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/sallemWhite"
        android:layout_alignRight="@+id/txt_password"
        android:layout_alignEnd="@+id/txt_password" />

    <TextView
        android:text="@string/forgot_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/lbl_forgot_password"
        android:textStyle="normal|italic"
        android:fontFamily="serif"
        android:typeface="serif"
        tools:targetApi="jelly_bean"
        android:layout_below="@+id/Btn_Sign_in"
        android:layout_alignLeft="@+id/Btn_Sign_in"
        android:layout_alignStart="@+id/Btn_Sign_in"
        android:onClick="resetPassword" />


</RelativeLayout>
